Almost working version of the test page.
This commit breaks the main page because it deletes some overly zealous
CSS properties.

Still todo: export the tests results, use the currently mounted agents,
include version information.

--- a/web_shell/local_cloud/Gemfile.master
+++ b/web_shell/local_cloud/Gemfile.master
@@ -14,7 +14,7 @@ gem 'i18n', '~>  0.6.4'
 
 # tests
 gem 'rack-test', require: 'rack/test'
-gem 'rspec'
+gem 'rspec', '~> 2.14'
 
 
 #################################################################
