--- a/web_shell/local_cloud_config/public/css/server_admin.css
+++ b/web_shell/local_cloud_config/public/css/server_admin.css
@@ -189,9 +189,9 @@ html {
 
 
 .center-label{
- text-align:center!important;
+ text-align:center;
 }
-
+/*
 th,td {
- text-align:center!important;
-}
+ text-align:center;
+}*/
