--- a/web_shell/local_cloud_config/public/css/server_admin.css
+++ b/web_shell/local_cloud_config/public/css/server_admin.css
@@ -191,7 +191,10 @@ html {
 .center-label{
  text-align:center;
 }
-/*
-th,td {
+
+#main_display th,
+#main_display td,
+#create_display th, 
+#create_display td {
  text-align:center;
-}*/
+}
