Add export as text option.

--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -1,7 +1,7 @@
 <div class="tests-container">
 
   <div class="row-fluid">
-    <div class="span12">
+    <div class="span8">
       Select agent(s) to test:
       <div class="btn-group">
         <a class="btn dropdown-toggle" id="select-agent-btn" data-toggle="dropdown" href="#">Choose an agent <span class="caret"></span>
@@ -11,6 +11,11 @@
         </ul>
       </div>
       <button class="btn btn-primary disabled" id="run-tests">Run tests</button>
+    </div>
+    <div class="span4">
+      <div class="pull-right">
+        <a class="btn" id="save-tests-results" href="/tests/status/text">Save tests results as raw text</a>
+      </div>
     </div>
   </div>
 
