--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -57,7 +57,7 @@
               <a href="./projects"><i class="icon-th-large icon-white"></i> SDK Agents</a>
             </li>
             <li class="<% if @active_tab=='logSdkAgentsPunk'%><%= 'active' %><% end %>">
-              <a href="./logSdkAgentsPunk#endlog"><i class="icon-medkit icon-white"></i> Server Log</a>
+              <a href="./logSdkAgentsPunk"><i class="icon-medkit icon-white"></i> Server Log</a>
             </li>
             <li class="<% if @active_tab=='unit_tests'%><%= 'active' %><% end %>">
               <a href="./tests"><i class="icon-check icon-white"></i> Unit tests</a>
@@ -74,7 +74,7 @@
 
                 <input name="redirect_to" type="hidden"
                 <% if @active_tab=='projects'%>value="/projects"<% end %>
-                <% if @active_tab=='logSdkAgentsPunk'%>value="/logSdkAgentsPunk#endlog"<% end %>
+                <% if @active_tab=='logSdkAgentsPunk'%>value="/logSdkAgentsPunk"<% end %>
                 <% if @active_tab=='patch_note'%>value="/patch_note"<% end %>
                 <% if @active_tab=='unit_tests'%>value="/tests"<% end %>
                 >
