Fix being able to save tests results when server is offline.
Also fix an event name and some internal presenter logic.

--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="span4">
       <div class="pull-right">
-        <a class="btn" id="save-tests-results" href="/tests/status/text">Save tests results as raw text</a>
+        <a class="btn disabled" id="save-tests-results">Save tests results as raw text</a>
       </div>
     </div>
   </div>
