--- a/web_shell/local_cloud/Gemfile.master
+++ b/web_shell/local_cloud/Gemfile.master
@@ -19,6 +19,8 @@ gem 'rspec', '~> 2.14'
 
 #################################################################
 
+gem 'httpclient'
+
 gem 'hashie'
 
 gem 'activesupport', '~> 3.1.1', require: 'active_support'
