Adding collection in the sdk.

--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -13,10 +13,12 @@
     <i class="icon-th"></i> : SERVER
     <i class="icon-star"></i> : PRESENCE
     <i class="icon-envelope"></i> : MESSAGE
-    <i class="icon-th-list"></i> TRACK
+    <i class="icon-road"></i> TRACK
     <i class="icon-fire"></i> : ORDER
+    <i class="icon-list"></i> : COLLECTION
     <i class="icon-share"></i> : ACK
   </div>
+
 
   <div class="pull-right">
 
