Add missing </div>.

--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -115,6 +115,7 @@
           <td>
           <div class="failed-example">
           <a href="#" title="Click to toggle the details" class="expand-backtrace"><span class="badge badge-important">{{this.status}} <i class="icon-chevron-down"></i> </span></a>
+          </div>
           </td>
         {{else}}
           <td><span class="badge badge-success">{{this.status}}</span></td>
