Tests page: do not collapse stack traces every couple of seconds during tests.
Save whether the backtrace is expanded in the model, so when the HTML
table containing the results is rewritten, the backtrace status is
preserved.

A better solution would be not rewriting the table, but just appending
the new tests results.

--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -98,7 +98,7 @@
 </script>
 
 <script id="test-suite-result-partial" type="text/x-handlebars-template">
-<table class="table">
+<table class="table" data-agent-name={{agentName}}>
   <thead>
     <th>#</th>
     <th>Test</th>
@@ -124,7 +124,11 @@
         <td>{{this.duration}} s</td>
         {{#if this.hasFailed}}
           <tr>
+            {{#if this.isBacktraceExpanded}}
+            <td colspan="5">
+            {{else}}
             <td colspan="5" style="display: none;">
+            {{/if}}
               <div class="backtrace text-left">
                 <p class="alert alert-danger">{{this.exception.class}}: {{this.exception.message}}</p>
                 <pre>
