--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -17,6 +17,8 @@
     <i class="icon-fire"></i> : ORDER
     <i class="icon-list"></i> : COLLECTION
     <i class="icon-share"></i> : ACK
+    <i class="icon-bell"></i> : POKE
+
   </div>
 
 
