Alter log print.

--- a/web_shell/local_cloud_config/views/logSdk.erb
+++ b/web_shell/local_cloud_config/views/logSdk.erb
@@ -6,7 +6,9 @@
 <div class="well row">
  <p>
    <small>
-     <%= logs_server %>
+      <% logs_server.each do |l| %>
+        <%= l%></br>
+      <% end %>
    </small>
  </p>
 </div>
