--- a/web_shell/local_cloud_config/views/logSdkAgents.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgents.erb
@@ -6,7 +6,9 @@
 <div class="well row">
   <p>
     <small>
-      <%= logs_agent %>
+      <% logs_agent.each do |l| %>
+        <%= l%></br>
+      <% end %>
     </small>
   </p>
 </div>
