Adding poke ton conf.

--- a/web_shell/local_cloud_config/views/gen_io_filter.erb
+++ b/web_shell/local_cloud_config/views/gen_io_filter.erb
@@ -12,6 +12,7 @@
     <option <% if @f['type'] == 'message'%><%= "selected=\"selected\"" %><%end%>>message</option>
     <option <% if @f['type'] == 'track'%><%= "selected=\"selected\"" %><%end%>>track</option>
     <option <% if @f['type'] == 'collection'%><%= "selected=\"selected\"" %><%end%>>collection</option>
+    <option <% if @f['type'] == 'poke'%><%= "selected=\"selected\"" %><%end%>>poke</option>
     </select><br/>
   </td>
   <td>
