--- a/web_shell/local_cloud/Gemfile.master
+++ b/web_shell/local_cloud/Gemfile.master
@@ -3,10 +3,10 @@ source 'http://rubygems.org'
 ### fake-cloud ###################################################
 
 gem 'sinatra', '~> 1.4.2'
-gem 'json', '~> 1.8.0'
-gem 'thread', '~> 0.0.8'
-gem 'logger', '~> 1.2.8'
-gem 'i18n', '~>  0.6.4'
+gem 'json'
+gem 'thread'
+gem 'logger'
+gem 'i18n'
 
 
 ### vm-sdk ######################################################
@@ -15,30 +15,28 @@ gem 'i18n', '~>  0.6.4'
 gem 'rack-test', require: 'rack/test'
 gem 'rspec', '~> 2.14'
 
-
-#################################################################
-
+# http
 gem 'httpclient'
-
 gem 'hashie'
 
-gem 'activesupport', '~> 3.1.1', require: 'active_support'
+### common ######################################################
+
+gem 'activesupport', '~> 4.2.0', require: 'active_support'
 
 # redis
-gem 'redis', '~> 3.0.4'
-gem 'redis-namespace', '~> 1.3.0'
+gem 'redis', '~> 3.2.0'
+gem 'redis-namespace', '~> 1.5.1'
 
 # mongo
-gem 'mongo'
-gem 'bson_ext'
+gem 'mongo', '~> 1.12.0'
+gem 'bson_ext', '~> 1.12.0'
 
 # protogen
-gem 'redis-lock', '~> 0.1.0' # needed for protogen
-gem 'msgpack', '~> 0.4.7 ' # needed for protogen
+gem 'redis-lock', '~> 0.2.0' # needed for protogen
+gem 'msgpack', '~> 0.5.10 ' # needed for protogen
 
 # scheduler
-gem 'rufus-scheduler'
-# gem 'whenever', '~> 0.8.2', :require => false
+gem 'whenever', '~> 0.9.4', :require => false
+gem 'rufus-scheduler', '~> 3.0.9'
 
 #################################################################
-
