Add support for asset config notifications.
For tests:
see '/asset_config' example in web_shell/local_cloud/local_cloud.rb

--- a/web_shell/local_cloud_config/views/gen_io_filter.erb
+++ b/web_shell/local_cloud_config/views/gen_io_filter.erb
@@ -15,6 +15,7 @@
     <option <% if @f['type'] == 'poke'%><%= "selected=\"selected\"" %><%end%>>poke</option>
     <option <% if @f['type'] == 'custom queues broadcasted'%><%= "selected=\"selected\"" %><%end%>>custom queues broadcasted</option>
     <option <% if @f['type'] == 'custom queues shared'%><%= "selected=\"selected\"" %><%end%>>custom queues shared</option>
+    <option <% if @f['type'] == 'assets config'%><%= "selected=\"selected\"" %><%end%>>assets config</option>
     </select><br/>
   </td>
   <td>
