--- a/web_shell/local_cloud/Gemfile.master
+++ b/web_shell/local_cloud/Gemfile.master
@@ -28,8 +28,8 @@ gem 'redis', '~> 3.2.0'
 gem 'redis-namespace', '~> 1.5.1'
 
 # mongo
-gem 'mongo', '~> 1.12.0'
-gem 'bson_ext', '~> 1.12.0'
+gem 'mongo', '~> 2.5.1'
+gem 'bson', '~> 4.3.0'
 
 # protogen
 gem 'redis-lock', '~> 0.2.0' # needed for protogen
