--- a/web_shell/local_cloud/Gemfile.master
+++ b/web_shell/local_cloud/Gemfile.master
@@ -14,6 +14,7 @@ gem 'i18n'
 # tests
 gem 'rack-test', '~> 0.7.0', require: 'rack/test'
 gem 'rspec', '~> 2.14'
+gem 'webmock'
 
 # http
 gem 'httpclient'
